2003-06-18  Brian Koebbe  <brian@koebbe.org>

	* src/sj-main.c (on_cell_edited):
	Fix title/artist renaming

	* src/sj-extracting.c (on_extract_activate):
	Clear current_duration when starting a new extraction (progress
	bar fix)

2003-06-03  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Uppercase the metadata keywords.

2003-06-02  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-extractor.c:
	Try and handle lame/mpegaudio encoders, selecting the right one.

2003-05-30  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added zh_TW to ALL_LINGUAS.

2003-05-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add : to the list of stripped characters as it really annoys
	Windows machines. Damn them.

	* src/sj-prefs.c:
	* src/sj-main.c:
	Change the "number - title" filename format to use zero-padded
	numbers so it sorts correctly.

2003-05-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the Extract button when its pressed.

2003-05-29  Ross Burton  <ross@burtonini.com>

	* src/sj-musicbrainz.c:
	Fix a typo so that multiple artist albums should work.

2003-05-28  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c:
	Updated from libbacon.

	* TODO: Updated.

2003-05-25  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added portuguese (pt) to ALL_LINGUAS.

2003-05-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Check if the file exists before extracting, and ask the user what
	they want to do.

2003-05-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Rename the Deselect All menu item.

2003-05-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Rename the metadata caps, and pull the encoder construction apart
	a little more, ready for future enhancements. Vorbis quality now
	0.6, much better. :)

	* src/sj-main.c:
	Disable the Deselect All menu item as appropriate.

2003-05-21  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
