@@ -63,6 +63,20 @@ void on_quit_activate (GtkMenuItem *item, gpointer user_data)
   gtk_main_quit ();
 }
 
+/**
+ * Clicked Eject
+ */
+void on_eject_activate (GtkMenuItem *item, gpointer user_data)
+{
+  char *command;
+  /*
+   * Hey, its a hack. But it is very portable :)
+   */
+  command = g_strdup_printf ("eject %s", device);
+  system (command);
+  g_free (command);
+}
+
 gboolean on_destory_event (GtkWidget *widget, GdkEvent *event, gpointer user_data)
 {
   if (extracting) {
